# hack-stack

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  flake.nix  justfile  main.py  nginx.conf  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/api/: debug.py  enhanced_routes.py  llamaindex_service.py  routes.py  services.py  weaviate_routes.py
backend/data/: enhanced_legacy_businesses.json  legacy_business_applications.json  legacy_businesses.json
backend/models/: __init__.py  legacy_business.py
backend/scripts/: setup_weaviate_schema.py
backend/services/: enhanced_business_service.py  pdf_processing_service.py  weaviate_service.py
config/: debug.yaml
frontend/: Dockerfile  astro.config.mjs  package-lock.json  package.json
frontend/src/components/: AIAnalyzer.svelte  ApiTestsTable.svelte  BusinessCard.astro  BusinessCard.svelte  BusinessList.astro  BusinessList.svelte  BusinessSearch.svelte  BusinessSearchAndList.svelte  Card.astro  CredentialCard.astro  EnhancedBusinessCard.astro  Navigation.astro  NeighborhoodCard.svelte  NeighborhoodGrouping.astro  RAGQueryInterface.astro  RagAssistant.svelte  SmartSearch.astro  SponsorCard.astro  StatusCard.astro  StatusIndicator.astro  TableCard.astro
frontend/src/config/: debug.yaml
frontend/src/layouts/: Layout.astro
frontend/src/pages/: debug.astro  index.astro
services/: business.py  mock_data.py  vendors.py
