[project]
name = "hack-stack"
version = "0.1.0"
description = "Hackathon-optimized demo stack with progressive enhancement"
authors = [
    {name = "Hack Stack Team"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "structlog>=24.5.0",
]
readme = "README.md"
requires-python = ">= 3.13"

[project.optional-dependencies]
# Layer 2: Real vendor integrations
vendors = [
    "openai>=1.50.0",
    "anthropic>=0.35.0",
    "weaviate-client>=4.8.0",
]

# Layer 3: Production features
production = [
    "prometheus-client>=0.21.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "redis>=5.2.0",
]

# Development tools
dev = [
    "pytest>=8.5.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# uv-specific configuration
[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]