[project]
name = "hack-stack-backend"
version = "0.1.0"
description = "Modern hackathon backend with FastAPI + uv"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "structlog>=24.1.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0.0",
    # LlamaIndex for PDF processing
    "llama-index>=0.10.0",
    "llama-index-llms-openai>=0.1.0",
    "llama-index-embeddings-openai>=0.1.0",
    "llama-parse>=0.4.0",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "weaviate-client>=4.15.4",
]

[project.optional-dependencies]
# Real vendor integrations
vendors = [
    "openai>=1.12.0",
    "anthropic>=0.17.0",
    "weaviate-client>=4.4.0",
]

# LlamaIndex multi-modal processing with PDF support
llamaindex = [
    "llama-index>=0.10.0",
    "llama-index-llms-openai>=0.1.0",
    "llama-index-embeddings-openai>=0.1.0",
    "llama-parse>=0.4.0",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
